--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -11,10 +11,22 @@ target_include_directories(rapidjson INTERFACE rapidjson/include)
 add_library(doctest INTERFACE)
 target_include_directories(doctest INTERFACE doctest/doctest)
 
+# SQLite 3 is built for MSVC target only
+if (MSVC)
+add_subdirectory(sqlite3)
+endif()
+
 # Use default flags for the libwebsockets library
-set(CMAKE_C_FLAGS_DEBUG     "-O0 -g3 -ggdb3")
-set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g3 -ggdb3")
-set(CMAKE_C_FLAGS_RELEASE   "-O2 -DNDEBUG")
-set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
+if (NOT MSVC)
+set(CMAKE_C_FLAGS_DEBUG     "${CMAKE_C_FLAGS_DEBUG_INIT} -O0 -g3 -ggdb3")
+set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG_INIT} -O0 -g3 -ggdb3")
+set(CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE_INIT} -O2 -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE_INIT} -O2 -DNDEBUG")
+else()
+set(CMAKE_C_FLAGS_DEBUG     "${CMAKE_C_FLAGS_DEBUG_INIT} /WX-")
+set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG_INIT} /WX-")
+set(CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE_INIT} /WX-")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE_INIT} /WX-")
+endif()
 
 add_subdirectory(libwebsockets)
