--- a/examples/common/CMakeLists.txt
+++ b/examples/common/CMakeLists.txt
@@ -13,7 +13,13 @@ add_library(examples_common OBJECT
 target_include_directories(examples_common PUBLIC . config simulators)
 
 # Dependencies
+if (NOT MSVC)
 target_link_libraries(examples_common
     open-ocpp-dynamic
     pthread
 )
+else()
+target_link_libraries(examples_common
+    open-ocpp-static
+)
+endif()
