--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -63,7 +63,7 @@ jobs:
     #    uses a compiled language
 
     - run: |
-       make clang-native
+       make clang
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
