--- a/tests/chargepoint/connector/CMakeLists.txt
+++ b/tests/chargepoint/connector/CMakeLists.txt
@@ -5,7 +5,7 @@
 
 # Unit tests for Connectors class
 add_executable(test_connectors test_connectors.cpp)
-target_link_libraries(test_connectors unit_tests_stubs doctest sqlite3 pthread dl )
+target_link_libraries(test_connectors ${OPENOCPP_COMMON_TEST_LIBS})
 add_test(
   NAME test_connectors
   COMMAND test_connectors
