--- a/tests/chargepoint/metervalues/CMakeLists.txt
+++ b/tests/chargepoint/metervalues/CMakeLists.txt
@@ -5,7 +5,7 @@
 
 # Unit tests for MeterValues component
 add_executable(test_metervalues test_metervalues.cpp)
-target_link_libraries(test_metervalues unit_tests_stubs doctest sqlite3 pthread dl )
+target_link_libraries(test_metervalues ${OPENOCPP_COMMON_TEST_LIBS})
 add_test(
   NAME test_metervalues
   COMMAND test_metervalues
