--- a/tests/rpc/CMakeLists.txt
+++ b/tests/rpc/CMakeLists.txt
@@ -5,7 +5,7 @@
 
 # Unit tests for Url class
 add_executable(test_rpc test_rpc.cpp)
-target_link_libraries(test_rpc rpc ws unit_tests_stubs doctest pthread dl )
+target_link_libraries(test_rpc rpc ws ${OPENOCPP_COMMON_TEST_LIBS})
 add_test(
   NAME test_rpc
   COMMAND test_rpc
