--- a/examples/quick_start_chargepoint/config/quick_start_chargepoint.ini
+++ b/examples/quick_start_chargepoint/config/quick_start_chargepoint.ini
@@ -2,7 +2,7 @@
 DatabasePath=./quick_start_chargepoint.db
 JsonSchemasPath=../../schemas/
 ConnexionUrl=wss://127.0.0.1:8080/openocpp/
-Tlsv12CipherList=ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-WITH-AES-256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:TLS-PSK-WITH-AES-256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-WITH-AES-128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:TLS-PSK-WITH-AES-128-GCM-SHA256
+Tlsv12CipherList=ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:PSK-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:PSK-AES128-GCM-SHA256
 Tlsv13CipherList=TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384
 TlsServerCertificateCa=../../examples/certificates/open-ocpp_ca.crt
 TlsClientCertificate=../../examples/certificates/open-ocpp_charge-point.crt
