--- a/examples/security_centralsystem/config/security_centralsystem_p2.ini
+++ b/examples/security_centralsystem/config/security_centralsystem_p2.ini
@@ -7,7 +7,7 @@ WebSocketPingInterval=30
 BootNotificationRetryInterval=30
 HeartbeatInterval=3600
 HttpBasicAuthent=true
-Tlsv12CipherList=ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-WITH-AES-256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:TLS-PSK-WITH-AES-256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-WITH-AES-128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:TLS-PSK-WITH-AES-128-GCM-SHA256
+Tlsv12CipherList=ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:PSK-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:PSK-AES128-GCM-SHA256
 Tlsv13CipherList=TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384
 TlsEcdhCurve=prime256v1
 TlsServerCertificate=../../examples/certificates/open-ocpp_central-system.crt
