[websocket] Create websocket client pool to limit number of threads when creating websocket clients

--- a/src/websockets/CMakeLists.txt
+++ b/src/websockets/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(ws OBJECT
     Url.cpp
     WebsocketFactory.cpp
     libwebsockets/LibWebsocketClient.cpp
+    libwebsockets/LibWebsocketClientPool.cpp
     libwebsockets/LibWebsocketServer.cpp
  )
 
