[central system - local controller] First implementation of hybrid central system / local controller + example

--- a/src/localcontroller/CMakeLists.txt
+++ b/src/localcontroller/CMakeLists.txt
@@ -25,12 +25,5 @@ target_include_directories(localcontroller PRIVATE .
 
 # Dependencies
 target_link_libraries(localcontroller
-    config
-    database
-    messages
-    rpc
-    helpers
-    log
-    version
-    x509
+    centralsystem
 )
