--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(iso15118_chargepoint)
 add_subdirectory(iso15118_centralsystem)
 add_subdirectory(quick_start_centralsystem)
 add_subdirectory(quick_start_chargepoint)
+add_subdirectory(quick_start_cs_lc_hybrid)
 add_subdirectory(quick_start_localcontroller)
 add_subdirectory(remote_chargepoint)
 add_subdirectory(security_centralsystem)
