[libwesocket] Disable LWS_WITH_NETLINK option

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -28,4 +28,5 @@ set(CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE_INIT} ${DISABLED_WARNING_LW
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE_INIT} ${DISABLED_WARNING_LWS}")
 endif()
 
+set(LWS_WITH_NETLINK OFF)
 add_subdirectory(libwebsockets)
