--- a/examples/quick_start_cs_lc_hybrid/config/quick_start_cs_lc_hybrid.ini
+++ b/examples/quick_start_cs_lc_hybrid/config/quick_start_cs_lc_hybrid.ini
@@ -20,5 +20,7 @@ TlsClientCertificate=../../examples/certificates/open-ocpp_charge-point.crt
 TlsClientCertificatePrivateKey=../../examples/certificates/open-ocpp_charge-point.key
 TlsClientCertificatePrivateKeyPassphrase=
 LogMaxEntriesCount=2000
+IncomingRequestsFromCpThreadPoolSize=10
+IncomingRequestsFromCsThreadPoolSize=10
 DisconnectFromCpWhenCsDisconnected=true
 Iso15118PnCEnabled=false
