--- a/examples/security_centralsystem/config/security_centralsystem_p2.ini
+++ b/examples/security_centralsystem/config/security_centralsystem_p2.ini
@@ -16,4 +16,5 @@ TlsServerCertificatePrivateKeyPassphrase=
 TlsServerCertificateCa=../../examples/certificates/open-ocpp_ca.crt
 TlsClientCertificateAuthent=false
 LogMaxEntriesCount=2000
+IncomingRequestsFromCpThreadPoolSize=5
 Iso15118PnCEnabled=false
