--- a/examples/quick_start_localcontroller/config/quick_start_localcontroller.ini
+++ b/examples/quick_start_localcontroller/config/quick_start_localcontroller.ini
@@ -18,4 +18,6 @@ TlsClientCertificate=../../examples/certificates/open-ocpp_charge-point.crt
 TlsClientCertificatePrivateKey=../../examples/certificates/open-ocpp_charge-point.key
 TlsClientCertificatePrivateKeyPassphrase=
 LogMaxEntriesCount=2000
+IncomingRequestsFromCpThreadPoolSize=10
+IncomingRequestsFromCsThreadPoolSize=10
 DisconnectFromCpWhenCsDisconnected=true
