--- a/examples/security_centralsystem/config/security_centralsystem_p1.ini
+++ b/examples/security_centralsystem/config/security_centralsystem_p1.ini
@@ -16,4 +16,5 @@ TlsServerCertificatePrivateKeyPassphrase=
 TlsServerCertificateCa=
 TlsClientCertificateAuthent=false
 LogMaxEntriesCount=2000
+IncomingRequestsFromCpThreadPoolSize=5
 Iso15118PnCEnabled=false
