--- a/examples/security_centralsystem/config/security_centralsystem_p3.ini
+++ b/examples/security_centralsystem/config/security_centralsystem_p3.ini
@@ -16,4 +16,5 @@ TlsServerCertificatePrivateKeyPassphrase=
 TlsServerCertificateCa=../../examples/certificates/open-ocpp_ca.crt
 TlsClientCertificateAuthent=true
 LogMaxEntriesCount=2000
+IncomingRequestsFromCpThreadPoolSize=5
 Iso15118PnCEnabled=false
