[cmake] Add options to not build as a shared library, not buld sqlite3 and not install doctest headers
Signed-off-by: Thomas BRUNEL <thomas_brunel@outlook.com>

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -8,11 +8,15 @@ endif()
 target_include_directories(rapidjson INTERFACE rapidjson/include)
 
 # Doctest is an header only on library
-add_library(doctest INTERFACE)
-target_include_directories(doctest INTERFACE doctest/doctest)
+if(${INSTALL_DOCTEST})
+    add_library(doctest INTERFACE)
+    target_include_directories(doctest INTERFACE doctest/doctest)
+endif()
 
 # SQLite 3
-add_subdirectory(sqlite3)
+if(${BUILD_SQLITE})
+    add_subdirectory(sqlite3)
+endif()
 
 # libwebsockets
 if(${BUILD_LWS_LIBRARY})
