[ocpp20] Add charge point interfaces and classes

--- a/src/ocpp20/CMakeLists.txt
+++ b/src/ocpp20/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 # Subdirectories
+add_subdirectory(chargepoint)
 add_subdirectory(centralsystem)
 add_subdirectory(localcontroller)
 add_subdirectory(messages)
