--- a/examples/ocpp20/common/CMakeLists.txt
+++ b/examples/ocpp20/common/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 # Common utility class for examples library
 add_library(examples_common20 OBJECT
+    DefaultChargePointEventsHandler.cpp
     DefaultCentralSystemEventsHandler.cpp
     DefaultLocalControllerEventsHandler.cpp
 )
