--- a/examples/ocpp20/CMakeLists.txt
+++ b/examples/ocpp20/CMakeLists.txt
@@ -2,5 +2,6 @@
 # Subdirectories
 add_subdirectory(common)
 add_subdirectory(quick_start_centralsystem)
+add_subdirectory(quick_start_chargepoint)
 add_subdirectory(quick_start_localcontroller)
 
