[ocpp20] Add device model implementation + GetBaseReport implementation example in quick_start_chargepoint20

--- a/examples/ocpp20/quick_start_chargepoint/config/quick_start_chargepoint20.ini
+++ b/examples/ocpp20/quick_start_chargepoint/config/quick_start_chargepoint20.ini
@@ -20,3 +20,177 @@ LogMaxEntriesCount=2000
 WebSocketPingInterval=10
 SecurityProfile=0
 BasicAuthPassword=P@ssw0rd!
+
+[TxCtrlr]
+TxStopPoint=EVConnected,Authorized
+TxStartPoint=PowerPathClosed
+TxBeforeAcceptedEnabled=false
+StopTxOnInvalidId=true
+MaxEnergyOnInvalidId=0
+StopTxOnEVSideDisconnect=true
+EVConnectionTimeOut=30
+[TariffCostCtrlr]
+TotalCostFallbackMessage=
+Enabled.Tariff=false
+Enabled.Cost=false
+Currency=eur
+Available.Tariff=false
+TariffFallbackMessage=
+Available.Cost=false
+[SmartChargingCtrlr]
+RateUnit=A
+ProfileStackLevel=100
+Phases3to1=false
+NotifyChargingLimitWithSchedules=false
+LimitChangeSignificance=0
+ExternalControlSignalsEnabled=false
+Entries=100
+PeriodsPerSchedule=100
+Enabled=true
+Available=true
+ACPhaseSwitchingSupported=false
+[SampledDataCtrlr]
+TxEndedInterval=0
+TxEndedMeasurands=
+SignReadings=false
+TxUpdatedMeasurands=
+Enabled=true
+TxUpdatedInterval=0
+TxStartedMeasurands=
+Available=false
+[ReservationCtrlr]
+NonEvseSpecific=false
+Enabled=true
+Available=true
+[LocalAuthListCtrlr]
+SupportsExpiryDateTime=true
+Storage=1000000
+ItemsPerMessage=200
+Enabled=true
+Entries=1000
+DisablePostAuthorize=true
+BytesPerMessage=10000
+Available=true
+[EVSE.EVSE 1.1]
+SupplyPhases=3
+Power=22000
+PhaseRotation=RST
+Available=true
+AvailabilityState=Available
+AllowReset=false
+[SecurityCtrlr]
+MaxCertificateChainSize=10000
+Identity=ChargePointTest
+CertificateEntries=20
+CertSigningWaitMinimum=30
+CertSigningRepeatTimes=3
+BasicAuthPassword=
+SecurityProfile=0
+OrganizationName=
+AdditionalRootCertificateCheck=false
+[AuthCacheCtrlr]
+Storage=1000000
+Policy=LRU
+LifeTime=86400
+Enabled=true
+DisablePostAuthorize=false
+Available=true
+[OCPPCommCtrlr]
+WebSocketPingInterval=10
+RetryBackOffRepeatTimes=10
+HeartbeatInterval=60
+MessageAttemptIntervalTransactionEvent.TransactionEvent=30
+UnlockOnEVSideDisconnect=true
+ActiveNetworkProfile=
+FieldLength.<message>.<field>=
+FileTransferProtocols=FTP,FTPS,HTTP,HTTPS
+MessageAttemptsTransactionEvent.TransactionEvent=
+RetryBackOffWaitMinimum=30
+OfflineThreshold=300
+NetworkConfigurationPriority=1
+NetworkProfileConnectionAttempts=3
+MessageTimeout.Default=10
+RetryBackOffRandomRange=30
+QueueAllMessages=false
+ResetRetries=3
+[Connector.1.1]
+SupplyPhases=3
+Power=22000
+PhaseRotation=RST
+ConnectorType=cType2
+Available=true
+AvailabilityState=true
+[DeviceDataCtrlr]
+ReportingValueSize=
+ItemsPerMessage.GetReport=100
+BytesPerMessage.SetVariables=10000
+ConfigurationValueSize=1000
+BytesPerMessage.GetVariables=10000
+ItemsPerMessage.SetVariables=100
+ItemsPerMessage.GetVariables=100
+BytesPerMessage.GetReport=10000
+[AuthCtrlr]
+OfflineTxForUnknownIdEnabled=false
+LocalPreAuthorize=true
+LocalAuthorizeOffline=true
+MasterPassGroupId=
+Enabled=true
+DisableRemoteAuthorization=false
+AuthorizeRemoteStart=true
+AdditionalInfoItemsPerMessage=10
+[ChargingStation]
+Available=true
+AllowNewSessionsPendingFirmwareUpdate=false
+[AlignedDataCtrlr]
+TxEndedInterval=0
+TxEndedMeasurands=
+SignReadings=false
+PublicKeyWithSignedMeterValue=
+Measurands=
+RegisterValuesWithoutPhases=true
+Interval=0
+Enabled=true
+Available=true
+[ISO15118Ctrlr]
+V2GCertificateInstallationEnabled=true
+RequestMeteringReceipt=false
+PnCEnabled=false
+ContractValidationOffline=false
+ContractCertificateInstallationEnabled=true
+CentralContractValidationAllowed=true
+[CustomizationCtrlr]
+CustomImplementationEnabled.<VendorId>=
+[MonitoringCtrlr]
+OfflineQueuingSeverity=0
+ItemsPerMessage.ClearVariableMonitoring=100
+Enabled=true
+BytesPerMessage.SetVariableMonitoring=10000
+BytesPerMessage.ClearVariableMonitoring=10000
+Available=true
+ItemsPerMessage.SetVariableMonitoring=100
+ActiveMonitoringLevel=0
+ActiveMonitoringBase=All
+[AlignedDataCtrlr.1]
+SendDuringIdle=false
+[DisplayMessageCtrlr]
+SupportedPriorities=AlwaysFront
+SupportedFormats=ASCII,UTF8
+Enabled=true
+DisplayMessages=10
+Available=true
+[ClockCtrlr]
+TimeZone=Europe/Paris
+TimeSource=Heartbeat
+TimeOffset=+01:00
+dateTime=
+TimeAdjustmentReportingThreshold=5
+NtpSource=manual
+NtpServerUri.1=
+NextTimeOffsetTransitionDateTime=
+[ISO15118Ctrlr.1]
+SeccId=
+ProtocolAgreed=
+ProtocolSupportedByEV=
+OrganizationName=
+ISO15118EvseId=
+CountryName=
