--- a/examples/ocpp20/quick_start_basicchargepoint/config/quick_start_basicchargepoint20.ini
+++ b/examples/ocpp20/quick_start_basicchargepoint/config/quick_start_basicchargepoint20.ini
@@ -1,5 +1,6 @@
 [ChargePoint]
-DatabasePath=./quick_start_chargepoint20.db
+DatabasePath=./quick_start_basicchargepoint20.db
+DeviceModelPath=./quick_start_basicchargepoint20.json
 JsonSchemasPath=../../schemas/ocpp20/
 ConnexionUrl=wss://127.0.0.1:9090/openocpp/
 Tlsv12CipherList=ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:PSK-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:PSK-AES128-GCM-SHA256
